--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="shortcut icon" href="src/assets/pomoLogo.svg" type="image/x-icon">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -13,7 +14,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto+Mono:wght@700&family=Roboto:wght@400;700&display=swap"
     rel="stylesheet" />
 
-  <title>PomoTimer | Início</title>
+  <title>Início | PomoTimer</title>
 </head>
 
 <body>
